# enowxwatcher

./: .gitignore  README.md  index.html  install.sh  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: build.yml
docs/plans/: 2026-07-04-enowxwatcher-design.md
src/: Root.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  metrics.rs  poller.rs  process.rs  ssh.rs  store.rs  webhook.rs
src/components/monitor/: AddVpsDialog.tsx  ProcessModal.tsx  SettingsTab.tsx  Sparkline.tsx  StatRing.tsx  StatusDot.tsx  VpsCard.tsx  WebhooksTab.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  switch.tsx  tabs.tsx
src/lib/: api.ts  format.ts  theme.ts  useMonitor.ts
src/views/: App.tsx  Tray.tsx
